# OCR-Doc-Parser

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/config/: settings.py
app/dependencies/: file.py  parser.py
app/integrations/: ocr.py  parser.py
app/repository/: file.py
app/routers/: file.py  ocr.py  parser.py
app/services/: file.py  ocr.py  parser.py
