[tool.poetry]
name = "mistral-doc-parser"
version = "0.1.0"
description = ""
authors = ["RocketMenace <grizzlygit777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pymupdf = "^1.25.5"
pydantic-settings = "^2.8.1"
mistralai = "^1.6.0"
aiofiles = "^24.1.0"
aiopath = "^0.7.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
